--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "Default Cypress Tests",
   "main": "index.js",
   "scripts": {
-    "test": "npx cypress run" 
-    
-  },
+  "cy:open": "cypress open",
+  "cy:run": "cypress run"
+}
+,
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "cypress": "^15.1.0"
+  "devDependencies": {
+    "cypress": "^15.2.0"
   }
 }
